- Add rounding to nav bar options and context menu + spacing fixes - Bumps up the blur by default

--- a/effects/glassy.css
+++ b/effects/glassy.css
@@ -3,7 +3,7 @@
   .mainDrawer,
   .toast,
   .appfooter {
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(75px);
     background-color: rgba(0, 0, 0, 0.35);
   }
   .paper-icon-button-light:hover,
